--- a/src/components/Pages/HomePage/FourthPage/fourthPage.scss
+++ b/src/components/Pages/HomePage/FourthPage/fourthPage.scss
@@ -1,5 +1,122 @@
 .fourth-page {
+    width: 100%;
+    height: 100vh;
+    background-color: #fff;
+    position: relative;
+}
+.fourth-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 70%;
+    margin: 0 auto;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+
+    h1 {
+        font-size: 80px;
+        font-weight: bold;
+        margin-bottom: 40px;
+        text-align: center;
+        // visibility: hidden;
+    }
+    .list-history {
+        position: relative;
+        .slick-dots {
+            position: absolute;
+            left: 0;
+            top: -30px;
+            text-align: left;
+            li {
+                padding: 0;
+                margin: 0;
+                width: 30px;
+                button {
+                    width: 100%;
+                    height: 100%;
+                    &::before {
+                        width: 100%;
+                        height: 1px;
+                        content: "";
+                        background: black;
+                    }
+                }
+                &.slick-active {
+                    button {
+                        &:before {
+                            height: 4px !important;
+                            top: -3px !important;
+                        }
+                    }
+                }
+            }
+        }
+        .item-box {
+            height: 250px;
+            overflow-y: auto;
+            color: #8b8b8b;
+            padding-right: 15px;
+            h2,
+            p {
+                font-size: 12px;
+                margin-bottom: 3px;
+            }
+            h2 {
+                font-family: "Montserrat-Medium", "Noto-Sans-KR-Thin";
+            }
+            .item-year {
+                padding-top: 30px;
+            }
+        }
+        .slick-current {
+            .year {
+                p {
+                    padding-left: 0 !important;
+                }
+            }
+        }
+        .item-history {
+            text-align: left;
+            padding-right: 15px;
+            .year {
+                p {
+                    font-size: 35px;
+                    font-weight: bold;
+                    padding-left: 10px;
+                    margin-bottom: 0;
+                }
+            }
+            ::-webkit-scrollbar {
+                width: 1px;
+            }
+            ::-webkit-scrollbar-track {
+                background: #cdcdcd;
+            }
+            &.item-2020,
+            &.item-2019,
+            &.item-2018,
+            &.item-2017,
+            &.item-2016 {
+                &:hover {
+                    ::-webkit-scrollbar-thumb {
+                        background: black;
+                    }
+                }
+            }
+        }
+    }
 }
 
 @media screen and (max-width: 1023px) {
+    .fourth-container {
+        h1 {
+            font-size: 30px;
+            font-weight: bold;
+        }
+    }
 }
