--- a/src/components/Pages/HomePage/SecondPage/secondPage.scss
+++ b/src/components/Pages/HomePage/SecondPage/secondPage.scss
@@ -1,8 +1,126 @@
 .second-container {
+    background: url("../../../../Assets/Images/bg_second.png") no-repeat center;
+    position: relative;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-size: 110%;
+    background-color: black;
+    overflow: hidden;
+    .first_content {
+        position: absolute;
+        top: 10%;
+        left: 17%;
+        color: #fff;
+        font-family: 'Montserrat-Medium';
+        p {
+            line-height: 24px;
+            font-weight: 600;
+            font-size: 13px;
+        }
+    }
+    .second_content {
+        color: #fff;
+        animation: fadeIn2 1s ease;
+        text-align: center;
+        p {
+            font-size: 126px;
+            line-height: 135px;
+            font-weight: bold;
+        }
+    }
 }
-@media (max-width: 687px) {
+@media screen and (max-width: 1750px) and (min-width: 1539px) {
+    .second-container{
+        .second_content{
+            p{
+                font-size: 100px;
+                line-height: 8.5rem;
+            }
+        }
+    }
 }
-@media (max-width: 1025px) {
+@media screen and (max-width: 1540px) and (min-width: 1340px) {
+    .second-container{
+        .second_content{
+            p{
+                font-size: 80px;
+                line-height: 7.5rem;
+            }
+        }
+    }
 }
-@media (max-width: 576px) {
+@media screen and (max-width: 1339px) and (min-width:  988px) {
+    .second-container{
+        .second_content{
+            p{
+                font-size: 60px;
+                line-height: 5.5rem;
+            }
+        }
+    }
+}
+@media screen and (max-width: 987px) and (min-width:  830px){
+    .second-container{
+        .second_content{
+            p{
+                font-size: 50px;
+                line-height: 4.5rem;
+            }
+        }
+    }
+}
+@media screen and (max-width: 829px) and (min-width: 687px) {
+    .second-container{
+        .second_content{
+            p{
+                font-size: 35px;
+                line-height: 3.5rem;
+            }
+        }
+    }
+}
+@media screen and (max-width: 686px) and (min-width: 484px) {
+    .second-container{
+        .second_content{
+            p{
+                font-size: 22px;
+                line-height: 3.5rem;
+            }
+        }
+    }
+}
+@media screen and (max-width: 483px) {
+    .second-container{
+        .second_content{
+            p{
+                font-size: 19px;
+                line-height: 3.5rem;
+            }
+        }
+    }
+}
+@media (max-width: 687px){
+    .second-container{
+        .first_content {
+            left: 15%;
+           p{
+                font-size: 11px;
+           }
+
+        }
+    }
+}
+@media (max-width: 1025px){
+    .second-container{
+        background-size: 141%;
+        background-position: 0px 0px;
+    }
+}
+@media (max-width: 576px){
+    .second-container{
+        background-size: 250%;
+        background-position: 31px 50%;
+    }
 }
