--- a/src/components/Pages/HomePage/ThirdPage/thirdPage.scss
+++ b/src/components/Pages/HomePage/ThirdPage/thirdPage.scss
@@ -1,6 +1,7 @@
 .third-page {
     width: 100%;
     height: 100vh;
+    background-color: gra;
     .third-page-container {
         height: 100vh;
         .image-background {
