--- a/src/components/SideMenu/SideMenu.scss
+++ b/src/components/SideMenu/SideMenu.scss
@@ -201,6 +201,8 @@
             li {
                 max-height: 60px;
                 color: white;
+                font-size: 20px;
+                cursor: pointer;
             }
             &.select {
                 color: white;
@@ -209,7 +211,7 @@
         }
         .active {
             li {
-                color: #ff9933;
+                color: white;
             }
         }
     }
@@ -257,7 +259,7 @@
     }
 
     .choose {
-        color: #ff9933;
+        color: #ff9933 !important;
     }
     .brochure-list,
     .proposal-list {
@@ -275,6 +277,8 @@
         text-align: left;
 
         display: flex;
+        opacity: 0;
+
         p {
             color: #fff;
             font-size: 19.5px;
@@ -285,6 +289,14 @@
             width: 11px;
             height: 16px;
         }
+    }
+    .item-1,
+    .item-2,
+    .item-3,
+    .item-4,
+    .item-5 {
+        opacity: 1;
+        transform: translateY(-100px);
     }
     .disable {
         display: none;
