--- a/src/components/Pages/HomePage/FifthPage/fifthPage.scss
+++ b/src/components/Pages/HomePage/FifthPage/fifthPage.scss
@@ -1,5 +1,5 @@
 .fifth-container {
-    background-image: url(../../../../Assets/Images/bg_fifthPage.png);
+    background-image: url(../../../../Assets/Images/banner-05.png);
     height: 100vh;
     margin: 0 auto;
     background-size: cover;
@@ -10,9 +10,10 @@
     .one {
         position: absolute;
         top: 10%;
-        left: 10%;
+        left: 5%;
         h3 {
             color: white;
+            text-transform: uppercase;
         }
     }
     .fifth-wrapper {
@@ -33,6 +34,7 @@
             }
             a {
                 color: white;
+                text-decoration: none;
                 p {
                     color: #cacaca;
                     z-index: 99;
