--- a/src/components/Pages/HomePage/SecondPage/secondPage.scss
+++ b/src/components/Pages/HomePage/SecondPage/secondPage.scss
@@ -15,11 +15,12 @@
             letter-spacing: 5px;
             font-size: 67px;
             font-weight: bold;
-            .text-yellow {
-                font-size: 67px;
-                color: #ff9933;
-                font-weight: bold;
-            }
+            color: white;
+        }
+        .text-yellow {
+            font-size: 67px;
+            color: #ff9933;
+            font-weight: bold;
         }
     }
 }
