--- a/src/components/Pages/HomePage/FirstPage/firstPage.scss
+++ b/src/components/Pages/HomePage/FirstPage/firstPage.scss
@@ -22,13 +22,13 @@
         }
         &__subTitle {
             margin-top: 0.8rem;
-            font-family: noto-sans-cjk-kr, sans-serif;
+            font-family: Noto Sans KR,sans-serif;
             color: #222;
             font-weight: 300;
             text-align: left;
         }
         &__note {
-            font-family: noto-sans-cjk-kr, sans-serif;
+            font-family: Noto Sans KR,sans-serif;
             color: #222;
             font-weight: 300;
             text-align: left;
