--- a/src/components/Pages/HomePage/SecondPage/secondPage.scss
+++ b/src/components/Pages/HomePage/SecondPage/secondPage.scss
@@ -1,5 +1,5 @@
 .second-container {
-    background: url("../../../../Assets/Images/banner-02-kr.png") no-repeat center;
+    background: url('../../../../Assets/Images/banner-02-kr.png') no-repeat center;
     position: relative;
     height: 100vh;
     display: flex;
@@ -11,6 +11,10 @@
     .text-area {
         line-height: 95px;
         color: white;
+        max-width: 1500px;
+        line-height: 1.18;
+        font-size: 67px;
+        font-weight: bold;
         .text {
             letter-spacing: 5px;
             font-size: 67px;
@@ -29,15 +33,16 @@
     .second-container {
         .text-area {
             color: white;
+            max-width: 900px;
             .text {
                 letter-spacing: 3px;
                 font-size: 40px;
                 font-weight: bold;
-                .text-yellow {
-                    font-size: 40px;
-                    color: #ff9933;
-                    font-weight: bold;
-                }
+            }
+            .text-yellow {
+                font-size: 40px;
+                color: #ff9933;
+                font-weight: bold;
             }
         }
     }
@@ -48,15 +53,16 @@
         .text-area {
             color: white;
             line-height: 50px;
+            max-width: 500px;
             .text {
                 letter-spacing: 3px;
                 font-size: 25px;
                 font-weight: bold;
-                .text-yellow {
-                    font-size: 25px;
-                    color: #ff9933;
-                    font-weight: bold;
-                }
+            }
+            .text-yellow {
+                font-size: 25px;
+                color: #ff9933;
+                font-weight: bold;
             }
         }
     }
@@ -65,17 +71,18 @@
 @media screen and (max-width: 483px) {
     .second-container {
         .text-area {
-            line-height: unset;
+            line-height: 0.5;
             color: white;
+            max-width: 300px;
             .text {
                 letter-spacing: 2px;
                 font-size: 20px;
                 font-weight: bold;
-                .text-yellow {
-                    font-size: 20px;
-                    color: #ff9933;
-                    font-weight: bold;
-                }
+            }
+            .text-yellow {
+                font-size: 20px !important;
+                color: #ff9933;
+                font-weight: bold;
             }
         }
     }
