--- a/src/components/Pages/HomePage/FirstPage/firstPage.scss
+++ b/src/components/Pages/HomePage/FirstPage/firstPage.scss
@@ -31,13 +31,13 @@
         }
         .subTitle {
             margin-top: 0.8rem;
-            font-family: Noto Sans KR,sans-serif;
+            font-family: "Roboto Light", sans-serif;
             color: #222;
             font-weight: 300;
             text-align: left;
         }
         .note {
-            font-family: Noto Sans KR,sans-serif;
+            font-family: "Roboto Light", sans-serif;
             color: #222;
             font-weight: 300;
             text-align: left;
