--- a/src/components/Pages/HomePage/FifthPage/fifthPage.scss
+++ b/src/components/Pages/HomePage/FifthPage/fifthPage.scss
@@ -1,5 +1,5 @@
 .fifth-container {
-    // background-image: url(../../../../Assets/Images/banner-05.png);
+    background-image: url(../../../../Assets/Images/banner-05.png);
     height: 100vh;
     margin: 0 auto;
     background-size: cover;
