--- a/src/components/Pages/HomePage/FourthPage/fourthPage.scss
+++ b/src/components/Pages/HomePage/FourthPage/fourthPage.scss
@@ -90,6 +90,7 @@
                 font-weight: bold;
                 padding-left: 10px;
                 margin-bottom: 0;
+                transform: none !important;
             }
             ::-webkit-scrollbar {
                 width: 1px;
