--- a/src/components/Pages/HomePage/FifthPage/fifthPage.scss
+++ b/src/components/Pages/HomePage/FifthPage/fifthPage.scss
@@ -14,6 +14,7 @@
         h3 {
             color: white;
             text-transform: uppercase;
+            font-size: 30px;
         }
     }
     .fifth-wrapper {
