--- a/src/components/Pages/HomePage/FirstPage/firstPage.scss
+++ b/src/components/Pages/HomePage/FirstPage/firstPage.scss
@@ -10,7 +10,7 @@
         top: 0;
         left: 0;
     }
-    .alo {
+    .logo {
         position: absolute;
         top: 6%;
         left: 5%;
