--- a/src/components/Pages/HomePage/ThirdPage/thirdPage.scss
+++ b/src/components/Pages/HomePage/ThirdPage/thirdPage.scss
@@ -2,6 +2,7 @@
     width: 100%;
     height: 100vh;
     background-color: gra;
+    overflow-y: hidden;
     .third-page-container {
         height: 100vh;
         .image-background {
