--- a/src/components/Pages/HomePage/FirstPage/firstPage.scss
+++ b/src/components/Pages/HomePage/FirstPage/firstPage.scss
@@ -4,6 +4,7 @@
     height: 100vh;
     .background {
         width: 100%;
+        height: 100%;
         position: absolute;
         background-size: cover;
         background-position: center;
