--- a/src/components/Pages/HomePage/SecondPage/secondPage.scss
+++ b/src/components/Pages/HomePage/SecondPage/secondPage.scss
@@ -1,5 +1,5 @@
 .second-container {
-    background: url("../../../../Assets/Images/banner-02-kr.png") no-repeat center;
+    background: url('../../../../Assets/Images/banner-02-kr.png') no-repeat center;
     position: relative;
     height: 100vh;
     display: flex;
@@ -8,18 +8,6 @@
     background-size: 110%;
     background-color: black;
     overflow: hidden;
-    .first_content {
-        position: absolute;
-        top: 50px;
-        left: 100px;
-        color: #fff;
-        font-family: "Roboto";
-        p {
-            line-height: 24px;
-            font-weight: 600;
-            font-size: 21px;
-        }
-    }
     .text-area {
         line-height: 95px;
         color: white;
