--- a/src/components/Pages/HomePage/FifthPage/fifthPage.scss
+++ b/src/components/Pages/HomePage/FifthPage/fifthPage.scss
@@ -22,7 +22,7 @@
         width: 70%;
         margin: 0 auto;
         position: absolute;
-        bottom: 5%;
+        bottom: 0;
         left: 10%;
         .block-item {
             width: 80%;
