--- a/src/components/Pages/HomePage/FourthPage/fourthPage.scss
+++ b/src/components/Pages/HomePage/FourthPage/fourthPage.scss
@@ -3,6 +3,7 @@
     height: 100vh;
     background-color: #fff;
     position: relative;
+    overflow-y: hidden;
 }
 .fourth-container {
     position: absolute;
