--- a/src/components/SideMenu/SideMenu.scss
+++ b/src/components/SideMenu/SideMenu.scss
@@ -8,6 +8,7 @@
     align-items: center;
     font-family: $primary-font;
     font-weight: 100;
+    z-index: 1000;
 
     &-change-lang-wrapper {
         display: flex;
