--- a/src/components/SideMenu/SideMenu.scss
+++ b/src/components/SideMenu/SideMenu.scss
@@ -61,7 +61,7 @@
         cursor: pointer;
         background-color: Transparent;
         background-repeat: no-repeat;
-        font-size: 16px;
+        font-size: 21px !important;
         font-weight: 300;
         margin-top: 20px;
         text-align: center;
