--- a/src/App.scss
+++ b/src/App.scss
@@ -1,107 +1,80 @@
 p {
-  margin: 0;
+    margin: 0;
 }
 
 h1,
 h2,
 h3 {
-  padding: 0;
-  margin: 0;
+    padding: 0;
+    margin: 0;
 }
 
 html,
 body {
-  -webkit-overflow-scrolling: auto;
-  overscroll-behavior: contain;
+    -webkit-overflow-scrolling: auto;
+    overscroll-behavior: contain;
 
-  &::-webkit-scrollbar {
-    display: none;
-  }
+    &::-webkit-scrollbar {
+        display: none;
+    }
 
-  -ms-overflow-style: none;
-  /* IE and Edge */
-  scrollbar-width: none;
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
 }
 
 body {
-  overflow: auto;
-  position: relative;
-  height: 100%;
+    overflow: auto;
+    position: relative;
+    height: 100%;
 }
 
 html {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
 
 section {
-  height: 100vh;
-  position: sticky;
-  top: 0;
+    height: 100vh;
+    position: sticky;
+    top: 0;
 }
 
-.menu_nav {
-  position: fixed;
-  top: 50%;
-  z-index: 5;
-  transform: translateY(-50%);
-  right: 100px;
-  text-align: right;
+#fp-nav ul li:hover a.active span,
+#fp-nav ul li a.active span,
+.fp-slidesNav ul li:hover a.active span,
+.fp-slidesNav ul li a.active span {
+    width: 30px !important;
+    height: 11px !important;
+    margin: 0 0 100px !important;
+    background-color: #f93;
+    border-radius: 0 !important;
+    transform: translate(-78%, -50%);
 }
-@media screen and (max-width: 840px) {
-  .menu_nav {
-    right: 50px;
-  }
+#fp-nav ul li a,
+.fp-slidesNav ul li a {
+    display: block;
+    position: relative;
+    z-index: 1;
+    cursor: pointer;
+    text-decoration: none;
+    width: 9px !important;
+    height: 9px !important;
+    margin: 7px 0 7px 21px;
+    background-color: #222;
 }
-.menu_nav button {
-  position: relative;
-  display: block;
-  margin: 7px 0;
-  transition: all 0.2s;
-  right: 0;
-  width: 7px;
-  height: 7px;
-  background-color: #fff;
-  cursor: pointer;
-  border-color: transparent !important;
-  padding: 0;
-  border-width: 0;
+#fp-nav ul li a span,
+.fp-slidesNav ul li a span {
+    border-radius: 0% !important ;
 }
-.menu_nav button::before {
-  content: "";
-  position: absolute;
-  transition: all 0.5s;
-  z-index: 0;
-  top: 0;
-  right: 0;
-  width: 7px;
-  height: 7px;
-  background-color: #000;
-}
-.menu_nav button:hover:before {
-  width: 30px;
-  background-color: #ff9933;
+#fp-nav.fp-right {
+    right: 100px !important;
 }
 
-.menu_nav button.active {
-  background-color: #ff9933;
-}
-
-.menu_nav .active:before {
-  background-color: #ff9933;
-  width: 25px;
-}
-@font-face {
-  font-family: 'Roboto-Bold';
-  src: url('./Assets/fonts/Roboto-Bold.ttf');
-}
-@media screen and (max-width: 840px) {
-  .menu_nav .active:before {
-    width: 10px;
-  }
-  .menu_nav button:hover:before {
-    width: 10px;
-  }
+@media screen and (max-width: 767.98px) {
+    #fp-nav.fp-right {
+        right: 50px !important;
+    }
 }
