--- a/src/App.scss
+++ b/src/App.scss
@@ -72,7 +72,14 @@ section {
 #fp-nav.fp-right {
     right: 100px !important;
 }
-
+@font-face {
+  font-family: 'Roboto-Bold';
+  src: url('./Assets/fonts/Roboto-Bold.ttf');
+}
+@font-face {
+  font-family: 'Roboto-Light';
+  src: url('./Assets/fonts/Roboto-Light.ttf');
+}
 @media screen and (max-width: 767.98px) {
     #fp-nav.fp-right {
         right: 50px !important;
