--- a/src/components/Pages/HomePage/FifthPage/fifthPage.scss
+++ b/src/components/Pages/HomePage/FifthPage/fifthPage.scss
@@ -9,12 +9,13 @@
     position: relative;
     .one {
         position: absolute;
-        top: 10%;
-        left: 5%;
+        top: 50px;
+        left: 100px;
         h3 {
             color: white;
             text-transform: uppercase;
-            font-size: 20.5px;
+            font-size: 21px;
+            font-family: 'Roboto-Bold';
         }
     }
     .fifth-wrapper {
@@ -22,16 +23,18 @@
         width: 70%;
         margin: 0 auto;
         position: absolute;
-        bottom: 0;
-        left: 10%;
+        bottom: 180px;
+        left: 180px;
         .block-item {
             width: 80%;
-            margin-bottom: 50px;
+            margin-bottom: 65px;
             h3 {
                 font-size: 39.5px;
-                font-weight: bold;
+                font-weight: 200;
                 color: white;
                 margin-bottom: 0;
+                font-family: 'Roboto-Bold';
+                margin-bottom: 16px;
             }
             a {
                 color: white;
@@ -43,13 +46,16 @@
                     margin: 0;
                     padding: 5px 20px;
                     font-size: 19.5px;
+                    font-family: 'Roboto-Light';
                 }
+            }
+            &:nth-child(3){
+                margin-bottom: 0 !important;
             }
             .learn-more {
                 animation: moveInRight 1.2s ease-in-out;
                 a {
                     color: #cacaca;
-                    padding: 5px 20px;
                     &:hover {
                         color: white;
                     }
@@ -83,12 +89,11 @@
         }
     }
 }
+
 @media screen and (max-width: 991px) and(min-width: 767px) {
     .fifth-container {
-        .one {
-            display: none;
-        }
         .fifth-wrapper {
+            left: 100px;
             .block-item {
                 h3 {
                     font-size: 24px !important;
@@ -99,8 +104,12 @@
 }
 @media screen and (max-width: 600px) {
     .fifth-container {
+        .one{
+            left: 5% !important;
+        }
         .fifth-wrapper {
             width: 90%;
+            left: 10% !important;
             .block-item {
                 h3 {
                     font-size: 18px !important;
@@ -109,3 +118,13 @@
         }
     }
 }
+@media (max-height: 700px) {
+    .fifth-container {
+        .fifth-wrapper {
+            bottom: 5%;
+            .block-item{
+                margin-bottom: 40px;
+            }
+        }
+    }
+  }
