edit color font

--- a/src/App.scss
+++ b/src/App.scss
@@ -52,29 +52,56 @@ section {
     background-color: #f93;
     border-radius: 0 !important;
     transform: translate(-78%, -21%);
+    
 }
-#fp-nav ul li a span, .fp-slidesNav ul li a span {
-  width: 9px !important;
-  height: 9px !important;
-  border-radius: 0% !important;
-  &:hover {
-    transform: translate(0%, 0%);
-    transform-origin: right;
-    transform: scaleX(calc(10 / 3));
-    height: 9px!important;
-}
-}
+  
 #fp-nav ul li a,
 .fp-slidesNav ul li a {
-    display: none;
-    width: 9px !important;
+    display: block;
+    position: relative;
+    z-index: 1;
+    cursor: pointer;
+    text-decoration: none;
     height: 9px !important;
-    
-  }
-  #fp-nav ul li {
-    
-    width: 9px !important;
-    height: 9px !important;
+    margin: 7px 0 7px 21px;
+    background-color: #222;
+    &:hover {
+      transition: 0.1s;
+      transform-origin: right;
+        transform: scaleX(calc(10 / 3));
+    }
+}
+#fp-nav ul li a.active {
+  transform: scaleX(calc(10 / 3));
+  transform-origin: right;
+  transition: 0.1s;
+  background-color: #f93!important;
+
+}
+#fp-nav ul li, .fp-slidesNav ul li {
+  display: block;
+  width: 9px!important;
+  height: 9px!important;
+  margin: 7px;
+  position: relative;
+}
+
+#fp-nav ul li a span, .fp-slidesNav ul li a span {
+  border-radius: 50%;
+  position: absolute;
+  z-index: 1;
+  height: 4px;
+  width: 4px;
+  border: 0;
+  background: #333;
+  left: 50%;
+  top: 50%;
+  margin: -2px 0 0 -2px;
+  display: none;
+  -webkit-transition: all .1s ease-in-out;
+  -moz-transition: all .1s ease-in-out;
+  -o-transition: all .1s ease-in-out;
+  transition: all .1s ease-in-out;
 }
 
 #fp-nav.fp-right {
