--- a/src/components/SideMenu/SideMenu.scss
+++ b/src/components/SideMenu/SideMenu.scss
@@ -54,7 +54,7 @@
     }
 
     .change-lang {
-        color: #cdcdcd;
+        color: #222;
         width: 35px;
         height: 30px;
         border: none;
@@ -131,7 +131,7 @@
         margin-bottom: 7.5px;
         position: relative;
 
-        background: #cdcdcd;
+        background: #222;
 
         z-index: 1;
 
