--- a/src/components/SideMenu/SideMenu.scss
+++ b/src/components/SideMenu/SideMenu.scss
@@ -25,7 +25,7 @@
     }
 
     &-change-lang-menu-item {
-        color: #9c9c9c;
+        color: #ffffff;
         height: 30px;
         border: none;
         cursor: pointer;
