--- a/src/components/Pages/HomePage/ThirdPage/thirdPage.scss
+++ b/src/components/Pages/HomePage/ThirdPage/thirdPage.scss
@@ -5,6 +5,15 @@
     width: 100%;
     background-size: cover;
     overflow: hidden;
+    .logo {
+        position: absolute;
+        top: 50px;
+        left: 100px;
+        font-size: 21px;
+        font-family: "Roboto-bold";
+        font-weight: bold;
+        color: #fff;
+    }
     @media screen and (max-width: 840px) {
         background-size: cover;
     }
@@ -63,7 +72,7 @@
                     width: 100%;
                     margin-bottom: 5vh;
                     word-break: keep-all;
-                    font-size: 30px;
+                    font-size: 33px;
                     font-weight: 700;
                     visibility: hidden;
                     @media screen and (max-width: 840px) {
@@ -73,7 +82,7 @@
                 }
                 .desc {
                     opacity: 0;
-                    font-size: 14px;
+                    font-size: 19px;
                     line-height: 27px;
                     font-family: "Noto Sans KR";
                     font-weight: 100;
