--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,4 @@
+@import "./Assets/Style/Varialble.scss";
 p {
     margin: 0;
 }
@@ -41,6 +42,15 @@ section {
     position: sticky;
     top: 0;
 }
+@mixin color($status: 0) {
+ 
+    @if $status != 0 {
+      background-color: $white;
+    }
+    @else {
+      background-color: $black;
+    }
+  }
 
 #fp-nav ul li:hover a.active span,
 #fp-nav ul li a.active span,
@@ -119,4 +129,8 @@ section {
     #fp-nav.fp-right {
         right: 50px !important;
     }
+}
+
+.active-color-dot {
+    background-color: #fff !important;
 }
