--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,3 @@
-@import "./Assets/Style/Varialble.scss";
 p {
     margin: 0;
 }
@@ -42,15 +41,6 @@ section {
     position: sticky;
     top: 0;
 }
-@mixin color($status: 0) {
- 
-    @if $status != 0 {
-      background-color: $white;
-    }
-    @else {
-      background-color: $black;
-    }
-  }
 
 #fp-nav ul li:hover a.active span,
 #fp-nav ul li a.active span,
@@ -62,9 +52,8 @@ section {
     background-color: #f93;
     border-radius: 0 !important;
     transform: translate(-78%, -21%);
-    
 }
-  
+
 #fp-nav ul li a,
 .fp-slidesNav ul li a {
     display: block;
@@ -76,54 +65,55 @@ section {
     margin: 7px 0 7px 21px;
     background-color: #222;
     &:hover {
-      transition: 0.1s;
-      transform-origin: right;
+        transition: 0.1s;
+        transform-origin: right;
         transform: scaleX(calc(10 / 3));
     }
 }
 #fp-nav ul li a.active {
-  transform: scaleX(calc(10 / 3));
-  transform-origin: right;
-  transition: 0.1s;
-  background-color: #f93!important;
-
+    transform: scaleX(calc(10 / 3));
+    transform-origin: right;
+    transition: 0.1s;
+    background-color: #f93 !important;
 }
-#fp-nav ul li, .fp-slidesNav ul li {
-  display: block;
-  width: 9px!important;
-  height: 9px!important;
-  margin: 7px;
-  position: relative;
+#fp-nav ul li,
+.fp-slidesNav ul li {
+    display: block;
+    width: 9px !important;
+    height: 9px !important;
+    margin: 7px;
+    position: relative;
 }
 
-#fp-nav ul li a span, .fp-slidesNav ul li a span {
-  border-radius: 50%;
-  position: absolute;
-  z-index: 1;
-  height: 4px;
-  width: 4px;
-  border: 0;
-  background: #333;
-  left: 50%;
-  top: 50%;
-  margin: -2px 0 0 -2px;
-  display: none;
-  -webkit-transition: all .1s ease-in-out;
-  -moz-transition: all .1s ease-in-out;
-  -o-transition: all .1s ease-in-out;
-  transition: all .1s ease-in-out;
+#fp-nav ul li a span,
+.fp-slidesNav ul li a span {
+    border-radius: 50%;
+    position: absolute;
+    z-index: 1;
+    height: 4px;
+    width: 4px;
+    border: 0;
+    background: #333;
+    left: 50%;
+    top: 50%;
+    margin: -2px 0 0 -2px;
+    display: none;
+    -webkit-transition: all 0.1s ease-in-out;
+    -moz-transition: all 0.1s ease-in-out;
+    -o-transition: all 0.1s ease-in-out;
+    transition: all 0.1s ease-in-out;
 }
 
 #fp-nav.fp-right {
     right: 100px !important;
 }
 @font-face {
-  font-family: 'Roboto-Bold';
-  src: url('./Assets/fonts/Roboto-Bold.ttf');
+    font-family: 'Roboto-Bold';
+    src: url('./Assets/fonts/Roboto-Bold.ttf');
 }
 @font-face {
-  font-family: 'Roboto-Light';
-  src: url('./Assets/fonts/Roboto-Light.ttf');
+    font-family: 'Roboto-Light';
+    src: url('./Assets/fonts/Roboto-Light.ttf');
 }
 @media screen and (max-width: 767.98px) {
     #fp-nav.fp-right {
