--- a/src/App.scss
+++ b/src/App.scss
@@ -34,7 +34,6 @@ html {
     position: fixed;
     width: 100%;
     height: 100%;
-    overflow: hidden;
 }
 
 section {
@@ -42,15 +41,6 @@ section {
     position: sticky;
     top: 0;
 }
-@mixin color($status: 0) {
- 
-    @if $status != 0 {
-      background-color: $white;
-    }
-    @else {
-      background-color: $black;
-    }
-  }
 
 #fp-nav ul li:hover a.active span,
 #fp-nav ul li a.active span,
@@ -75,10 +65,11 @@ section {
     height: 9px !important;
     margin: 7px 0 7px 21px;
     background-color: #222;
+    transition: 0.4s;
     &:hover {
       transition: 0.1s;
       transform-origin: right;
-        transform: scaleX(calc(10 / 3));
+        transform: scaleX(4);
     }
 }
 #fp-nav ul li a.active {
@@ -86,6 +77,9 @@ section {
   transform-origin: right;
   transition: 0.1s;
   background-color: #f93!important;
+  &:hover {
+    transform: scaleX(4);
+  }
 
 }
 #fp-nav ul li, .fp-slidesNav ul li {
