--- a/src/components/Pages/HomePage/SecondPage/secondPage.scss
+++ b/src/components/Pages/HomePage/SecondPage/secondPage.scss
@@ -20,13 +20,14 @@
             font-size: 21px;
         }
     }
-    .text-area {
+    .second-page-text-area {
         line-height: 95px;
         color: white;
         max-width: 1500px;
         line-height: 1.18;
         font-size: 67px;
         font-weight: bold;
+        visibility: hidden; //done
         .text {
             letter-spacing: 5px;
             font-size: 67px;
@@ -43,9 +44,10 @@
 
 @media screen and (max-width: 1540px) and (min-width: 988px) {
     .second-container {
-        .text-area {
+        .second-page-text-area {
             color: white;
-            max-width: 900px;
+            visibility: hidden;
+            max-width: 900px; // sửa thành page-second-text-area hay là text-area anh? :v để để nguyên thử
             .text {
                 letter-spacing: 3px;
                 font-size: 40px;
