--- a/src/components/Pages/HomePage/ThirdPage/thirdPage.scss
+++ b/src/components/Pages/HomePage/ThirdPage/thirdPage.scss
@@ -80,6 +80,9 @@
                         font-size: 18px;
                     }
                 }
+                .title_fourth {
+                    color: #ff9933;
+                }
                 .desc {
                     opacity: 0;
                     font-size: 19px;
