--- a/src/components/SideMenu/SideMenu.scss
+++ b/src/components/SideMenu/SideMenu.scss
@@ -307,6 +307,9 @@
             font-size: 19.5px;
             margin-right: 15px;
             display: inline;
+            &:hover {
+                color: gray;
+            }
         }
         img {
             width: 12px;
