--- a/src/components/Pages/HomePage/FourthPage/fourthPage.scss
+++ b/src/components/Pages/HomePage/FourthPage/fourthPage.scss
@@ -38,6 +38,7 @@
         text-transform: uppercase;
         font-family: 'Roboto-Bold';
         letter-spacing: 4.93px;
+        line-height: 1.66;
     }
     .list-story{
         position: relative;
