--- a/src/components/Pages/HomePage/ThirdPage/thirdPage.scss
+++ b/src/components/Pages/HomePage/ThirdPage/thirdPage.scss
@@ -57,6 +57,11 @@
             transition: all 0.2s !important;
             padding: 0 30px;
             box-sizing: border-box;
+            &:nth-child(4){
+                .title{
+                    color: #ff9933;
+                }
+            }
             @media (max-width: 840px) {
                 width: 100%;
                 height: 15%;
